--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <header><!-- HEADER HERE --></header>
+        <header>Copyright &copy;</header>  
     <!--Top part of the page!!-->
     <div class = "topBar">
     <nav class = "header">
@@ -28,10 +28,34 @@
     <div class = "main">   
         <h2>Portfolio</h2>
         <hr>
+    <div class = "projects">
+        <div class = "column">
 
-        <p class = "portfoliosummary">
+            <div class ="placeholder">
+                <img src = "images/placeholder2.png">
+                <p>Placeholder</p>
+            </div>
+
+            <div class ="placeholder">
+                    <img src = "images/placeholder2.png">
+                <p>Placeholder</p>
+            </div>          
+        </div>
+    </div>
+    <div class = "projects">
+        <div class = "column">
+            <div class = "placeholder">
+                <img src = "images/placeholder2.png">
+                <p>Placeholder</p>
+            </div>
+            <div class = "placeholder">
+                    <img src = "images/placeholder2.png">
+                    <p>Placeholder</p>
+            </div>
+        </div>    
+    </div>
        
     </div>
-    <footer>Copyright &copy; 2018</footer>
+    <footer>Copyright &copy;</footer>
 </body>
 </html>
