--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
         <p>
         Here you can see all my cool projects and stuff!
         </p>
-        <img src = "images/turtle.jpg">
+        <a href="Projects/Activity 2.6/index.html"><img src="images/turtle.jpg" /></a>
         <p>
             Here's some of my stuff!
             <ul>
             <li><a href = "Projects/Basic-Portfolio/index.html">My Portfolio!</a></li>
             </ul>
+        </p>
+        <br>
+        <p>
+            P.S. Click the turtle for a surprise :-)
         </p>
     </div>
 </body>
