--- a/Projects/Activity 2.6/index.html
+++ b/Projects/Activity 2.6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>TURTLES TURTLES TURTLES</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
@@ -19,9 +19,11 @@
                 1. Turtles are theorized to first have appeared during the late Triassic Period.
             </li>
             <li>2. Their shell may have evolved from primordial backbones and ribs.</li>
-            <li>3. Unfortunately, the top 25 species of turtles are likely to be extinct, and an inclusive total of 40 species are 'very likely' to become extinct.<a href ="url(http://www.iucn-tftsg.org/top-25-2011/")>[1]</a></li>
+            <li>3. Unfortunately, the top 25 species of turtles are likely to be extinct, and an inclusive total of 40 species are 'very likely' to become extinct.<a href ="http://www.iucn-tftsg.org/top-25-2011/">[1]</a></li>
             <li></li>
         </ol>
+        <br>
+        <a href = "../../index.html">Back</a>
     </div>
 </body>
 </html>
