--- a/Projects/Basic-Portfolio/index.html
+++ b/Projects/Basic-Portfolio/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Anthony's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <header>Copyright &copy;</header>
+    <!-- <header>Copyright &copy;</header> -->
     <!--Top part of the page!!-->
     <div class = "topBar">
     <nav class = "header">
@@ -29,15 +29,17 @@
     <div class = "main">   
         <h2>About Me</h2>
         <hr>
-        <img src = "images/dummyprof.png" alt ="picture coming soon!">
-        <p>
-            My name is Anthony Le, a newly establised developer.  I haven't had much experience in coding before, but I am eager to learn and am quick to pick up on new ideas and subjects.  I also love a challenge so I am looking forward to the grit of this BootCamp.  So far I am moderately versed in HTML and CSS, but that repertoire is bound to grow soon!</p>
+        <img class = "myPic" src = "images/dummyprof.png" alt ="picture coming soon!">
+        <div class = "aboutText">
+            <p>
+                My name is Anthony Le, a newly establised developer.  I haven't had much experience in coding before, but I am eager to learn and am quick to pick up on new ideas and subjects.  I also love a challenge so I am looking forward to the grit of this BootCamp.  So far I am moderately versed in HTML and CSS, but that repertoire is bound to grow soon!</p>
             <p>
                 If you have any questions feel free to <a href="contact.html"> contact me!</a>
             </p>
-        <p>
+            <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et diam eu ligula pellentesque egestas. Duis maximus ipsum ligula, et maximus urna faucibus eu. Suspendisse quis lacus sed libero vestibulum ullamcorper scelerisque ut libero. Praesent volutpat cursus viverra. Sed vestibulum pulvinar eros, non congue lorem placerat at. Maecenas mi dolor, fringilla fringilla lorem eget, maximus dignissim lectus. Cras condimentum elementum est, sed placerat massa ultrices ac.
-        </p>      
+            </p>
+        </div>
     </div>
     <div class = ".push">HEY</div>
     <footer>Copyright &copy;</footer>
