--- a/Projects/Basic-Portfolio/portfolio.html
+++ b/Projects/Basic-Portfolio/portfolio.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-        <header>Copyright &copy;</header>  
+        <!-- <header>Copyright &copy;</header>   -->
     <!--Top part of the page!!-->
     <div class = "topBar">
     <nav class = "header">
@@ -34,12 +33,16 @@
 
             <div class ="placeholder">
                 <img src = "images/placeholder2.png">
-                <p>Placeholder</p>
+                <p>
+                    <a class ="projLinks"href ="#">Placeholder</a>
+                </p>
             </div>
 
             <div class ="placeholder">
                     <img src = "images/placeholder2.png">
-                <p>Placeholder</p>
+                <p>
+                    <a class ="projLinks" href ="#">Placeholder</a>
+                </p>
             </div>          
         </div>
     </div>
@@ -47,15 +50,24 @@
         <div class = "column">
             <div class = "placeholder">
                 <img src = "images/placeholder2.png">
-                <p>Placeholder</p>
+                <p>
+                    <a class = "projLinks" href ="#">Placeholder</a>
+                </p>
             </div>
             <div class = "placeholder">
                     <img src = "images/placeholder2.png">
-                    <p>Placeholder</p>
+                <p>
+                    <a class = "projLinks" href ="#">Placeholder</a>
+                </p>
             </div>
         </div>    
     </div>
-       
+    <div class = "projLinkNoPicture">
+        <a class = "projLinkSmall" href -"#">PlaceHolder Link</a>
+        <a class = "projLinkSmall" href -"#">PlaceHolder Link</a>
+        <a class = "projLinkSmall" href -"#">PlaceHolder Link</a>
+        <a class = "projLinkSmall" href -"#">PlaceHolder Link</a>
+    </div>
     </div>
     <footer>Copyright &copy;</footer>
 </body>
