--- a/Projects/Basic-Portfolio/contact.html
+++ b/Projects/Basic-Portfolio/contact.html
@@ -11,7 +11,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-        <header>Copyright &copy;</header>
+        <!-- <header>Copyright &copy;</header> -->
     <!--Top part of the page!!-->
     <div class = "topBar">
     <nav class = "header">
