added word guessing game

--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -42,12 +42,12 @@
                 <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 1
+                            Word Guessing Game
                     </h5>
                         <p class="card-text">
-                            Description for Project 1 goes here!
+                            Here I made a hangman-style word guessing game featuring common flowers!
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="../word_guess_game/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
                 </div>
