--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -39,7 +39,7 @@
         <div class = "col-md-4">
 <!--Project 1-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="../word_guess_game/assets/images/wordguessinggameflowerpicture.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
                             Word Guessing Game
