star wars game 2

--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-<!--Project 2-->
+<!--Project 4-->
             <div class = "card m-4" style="width: 18rem;">
                 <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
                 <div class="card-body">
@@ -89,15 +89,15 @@
         <div class = "col-md-4">        
 <!--Project 2-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="images/swtor.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 2
+                            Star Wars RPG
                     </h5>
                         <p class="card-text">
-                            Description for Project 2 goes here!
+                            A browser based Star Wars RPG.
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="../star-wars-rgp/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
                 </div>
