star wars comment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>
             Here's some of my stuff!
             <ul>
-            <li><a href = "Projects/Basic-Portfolio/index.html">My Portfolio!</a></li>
+            <li><a href = "Projects/Basic-Portfolio-Bootstrap/">My Portfolio!</a></li>
             </ul>
         </p>
         <br>
