trivia game update

--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -139,15 +139,15 @@
         <div class = "col-md-4">  
 <!--Project 3-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="images/TriviaBG.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 3
+                            Trivia Game!
                     </h5>
                         <p class="card-text">
-                            Description for Project 3 goes here!
+                            A trivia game made using JQuery, Bootstrap, and totally trivial questions!
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="../triviaGame/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
                 </div>
