--- a/Projects/triviaGame/index.html
+++ b/Projects/triviaGame/index.html
@@ -28,8 +28,9 @@
         </nav>
     </div>
     <!--Main area-->
-    <div class="container text-center">
-        <div class="jumbotron trans">
+    <div class="container text-center p-2">
+        <div class="jumbotron trans p-4">
+            <p id="quesTracker" class="text-left"></p>
             <div id="title">
                 <h1>Trivial Trivia!</h1>
             </div>
