--- a/Projects/triviaGame/index.html
+++ b/Projects/triviaGame/index.html
@@ -37,7 +37,9 @@
             <div id="timer"></div>
             <button id="startButton" class="btn btn-info btn-lg m-4">Start</button>
             <div id="question" class="d-md-block"></div>
-            <form><div id="answers" class="d-md-block"></div></form>
+            <form>
+                <div id="answers" class="d-md-block"></div>
+            </form>
             <button id="submitButton" class="btn btn-success btn-lg hide m-2">Submit</button>
             <button id="restartButton" class="btn btn-primary btn-lg hide m-2">Restart</button>
 
