buttons and gif add

--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -12,19 +12,20 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid p-1">
         <div class="jumbotron text-center">
-            <p class="lead">GIF Search!</p>
+            <p class="lead">GIFTASTIC</p>
+            <div class="m-2" id="gif-buttons"></div>
             <form id="gif-form">
                 <label for="gif-search"></label>
                 <input type="text" id="gif-search"><br>
-                <button id="goGif" type="button" class="btn btn-primary btn-lg m-2">Gif Search</button>
+                <button id="goGif" type="button" class="btn btn-primary btn-lg m-2">Add another gif yo</button>
 
             </form>
         </div>
-        <div class="container">
-            <div id="gif-view" class="row">
-            </div>
+    </div>
+    <div class="container-fluid">
+        <div id="gif-view" class="row">
         </div>
     </div>
 
