--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="container-fluid p-1">
         <div class="jumbotron text-center">
-            <p class="lead">GIFTASTIC</p>
+            <p class="lead">SUPERGIFS</p>
             <div class="m-2" id="gif-buttons"></div>
             <form id="gif-form">
                 <label for="gif-search"></label>
                 <input type="text" id="gif-search"><br>
-                <button id="goGif" type="button" class="btn btn-primary btn-lg m-2">Add another gif yo</button>
+                <input id="goGif" type="submit" class="btn btn-primary btn-lg m-2" value="Add a new gif topic yo"></button>
 
             </form>
         </div>
