--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid p-1">
         <div class="jumbotron text-center">
-            <p class="lead">SUPERGIFS</p>
+            <p class="lead text-dark">SUPERGIFS</p>
             <div class="m-2" id="gif-buttons"></div>
             <form id="gif-form">
                 <label for="gif-search"></label>
