ratings aspect and border

--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div id="gif-view" class="row">
+        <div id="gif-view" class="">
         </div>
     </div>
 
