--- a/Projects/star-wars-rgp/index.html
+++ b/Projects/star-wars-rgp/index.html
@@ -29,9 +29,10 @@
     </div>
     <!--Game Consoles-->
     <div class="container m-auto">
-        <div class="jumbotron sticky-top">
-            <button type="button" class="btn btn-warning btn-sm audioButton">Audio On</button>
-            <h1 class="text-center" id="gameMessage">
+        <div class="jumbotron sticky-top p-2 m-2">
+                <h1 class="text-center" id="gameMessage">
+            <button type="button" class="text-left btn btn-warning btn-sm audioButton">Audio On</button>
+            
                 Choose your character!
             </h1>
             <div class="buttonDiv text-center">
