--- a/Projects/Basic-Portfolio-Bootstrap/portfolio.html
+++ b/Projects/Basic-Portfolio-Bootstrap/portfolio.html
@@ -55,15 +55,15 @@
 
 <!--Project 4-->
             <div class = "card m-4" style="width: 18rem;">
-                <img class="card-img-top" src="images/200x200image.png" alt="Card image cap">
+                <img class="card-img-top" src="images/giftastic.gif" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">
-                            Project 4
+                            SUPERGIFS
                     </h5>
                         <p class="card-text">
-                            Description for Project 4 goes here!
+                            Awesome app that searches for the top 10 gifs from the giphy api!
                         </p>
-                    <a href="#" class="btn btn-primary">
+                    <a href="../GIFTASTIC/index.html" class="btn btn-primary">
                         Check it out!
                     </a>
                 </div>
