toggle rating and click sound

--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -22,7 +22,7 @@
                 </h1>
             </span>
             <div class="btn-group mr-2" role="group" aria-label="Second group">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
                     Instructions
                 </button>
             </div>
@@ -35,24 +35,23 @@
         </nav>
     </div>
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade text-dark" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">How hard can it be?</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body text-dark">
                     <li>Click a button to get 10 gifs</li>
-                    <li>You can click a gif to play/play</li>
+                    <li>You can click a gif to play/pause</li>
                     <li>Click on the gif rating to copy it to your clipboard!</li>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
                 </div>
             </div>
         </div>
