--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -16,10 +16,8 @@
     <!--Nav Bar-->
     <div class="container-fluid sticky-top p-0">
         <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1 roundedh-50">
-                <h1>
-                    Anthony Le
-                </h1>
+            <span class="navbar-brand mb-0 h1">
+                Anthony Le
             </span>
             <div class="btn-group mr-2" role="group" aria-label="Second group">
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
@@ -45,11 +43,11 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body text-dark">
+                <ul class="flex-row p-auto modal-body text-dark clearfix">
                     <li>Click a button to get 10 gifs</li>
                     <li>You can click a gif to play/pause</li>
                     <li>Click on the gif rating to copy it to your clipboard!</li>
-                </div>
+                </ul>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
                 </div>
