--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -57,10 +57,8 @@
     <!--Main Container-->
     <div class="container p-1">
         <div class="jumbotron text-center p-4 m-0">
-            <p class="lead">
-                <h2 class="text-dark">
-                    SUPERGIFS
-                </h2>
+            <p class="lead text-dark display-4">
+                SUPERGIFS         
             </p>
             <div class="m-2" id="gif-buttons"></div>
             <form id="gif-form">
