--- a/Projects/GIFTASTIC/index.html
+++ b/Projects/GIFTASTIC/index.html
@@ -43,7 +43,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <ul class="flex-row p-auto modal-body text-dark clearfix">
+                <ul class="modal-body text-dark">
                     <li>Click a button to get 10 gifs</li>
                     <li>You can click a gif to play/pause</li>
                     <li>Click on the gif rating to copy it to your clipboard!</li>
