chat border and sizing

--- a/Projects/RPSMP/index.html
+++ b/Projects/RPSMP/index.html
@@ -21,9 +21,9 @@
             </form>
             <div id="chatZone">
                 <div id="chatContent">
-                    <div class="text-center data-chat-log w-50 bg-light m-0 p-0" id="chatLog"></div>
+                    <div class="border border-secondary text-left data-chat-log bg-light m-0 p-0" id="chatLog"></div>
                     <div class="form-group">
-                        <label for="chat-input">Small textarea</label>
+                        <label for="chat-input"></label>
                         <textarea class="form-control rounded-0" id="chat-input" rows="3"></textarea>
                         <input type="submit" class="btn btn-danger" id="chat-submit" value="Send">
                     </div>
