--- a/Projects/RPSMP/index.html
+++ b/Projects/RPSMP/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>RPS-MP</title>
 </head>
@@ -17,15 +19,20 @@
             <form>
                 <label for="username-input"></label>
                 <input type="text" id="username-input" placeholder="Name">
-                <input type="submit" id="username-submit" class="btn btn-primary" value="Join">
+                <input type="submit" id="username-submit" class="btn btn-primary btn-sm m-1" value="Join">
             </form>
+            <button type="submit" class="btn-sm p-0 m-2 btn btn-danger">
+                <i class="fas fa-hand-scissors btn"></i>
+            </button>
+            
             <div id="chatZone">
                 <div id="chatContent">
-                    <div class="border border-secondary text-left data-chat-log bg-light m-0 p-0" id="chatLog"></div>
+                    <div class="border border-secondary w-50 text-justify data-chat-log bg-light m-auto p-0" id="chatLog"></div>
                     <div class="form-group">
                         <label for="chat-input"></label>
-                        <textarea class="form-control rounded-0" id="chat-input" rows="3"></textarea>
-                        <input type="submit" class="btn btn-danger" id="chat-submit" value="Send">
+                        <textarea maxlength="500" placeholder="Enter Message" class="form-control rounded-0" id="chat-input"
+                            rows="3"></textarea>
+                        <input type="submit" class="btn btn-danger btn-sm m-1" id="chat-submit" value="Send">
                     </div>
                 </div>
             </div>
