--- a/Projects/RPSMP/index.html
+++ b/Projects/RPSMP/index.html
@@ -31,11 +31,7 @@
                     <div class="card m-auto" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title" id="name-player1">Waiting for Player 1...</h5>
-                            <ul class="card-text text-left stats-player1">
-                                <!-- <li>Wins: </li>
-                                <li>Losses: </li>
-                                <li>Ties: </li> -->
-                            </ul>
+                            <ul class="card-text text-left stats-player1"></ul>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
@@ -73,11 +69,7 @@
                     <div class="card m-auto" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title" id="name-player2">Waiting for Player 2...</h5>
-                            <ul class="card-text text-left stats-player2">
-                                <!-- <li>Wins: </li>
-                                <li>Losses: </li>
-                                <li>Ties: </li> -->
-                            </ul>
+                            <ul class="card-text text-left stats-player2"></ul>
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
